Added reference to molecular dynamics and inserted "showbf" mention

--- a/main.bib
+++ b/main.bib
@@ -53,3 +53,12 @@
   year={2011},
   publisher={IEEE}
 }
+
+@article{Brooks2009CHARMMTB,
+	title={CHARMM: The biomolecular simulation program},
+	author={Bernard R. Brooks and Charles L. Brooks and Alexander D. MacKerell and Lennart Nilsson and Robert J. Petrella and Beno{\^i}t Roux and Y. Won and G. Archontis and Christian Bartels and Stefan Boresch and Amedeo Caflisch and Leo S. D. Caves and Qiang Cui and Aaron R. Dinner and Michael Feig and S. Fischer and Jiali Gao and Milan Hodo{\vs}{\vc}ek and Wonpil Im and Krzysztof Kuczera and Themis Lazaridis and J. Ma and V. Ovchinnikov and Emanuele Paci and Richard W. Pastor and Carol Beth Post and J. Z. Pu and Michael Schaefer and Bruce Tidor and Richard M. Venable and H. Lee Woodcock and Xin Wu and W. Yang and Darrin M. York and Martin Karplus},
+	journal={Journal of computational chemistry},
+	year={2009},
+	volume={30 10},
+	pages={1545-614}
+}
