--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -124,9 +124,16 @@ allocation among various resource types to remove batch-level static
 partitioning. Finally, it should integrate the PanDA system and resources
 more tightly for new advanced workloads.
 
-Figure 1. Harvester architecture
+\begin{figure}
+	\centering
+	\includegraphics[width=0.49\textwidth]{figures/panda-harvester-overview.pdf}
+	\caption{Harvester architecture}
+	\label{fig:harvester-architecture}
+\end{figure}
 
-Figure 1 shows a schematic view of the Harvester architecture. Harvester is a
+%Figure 1. Harvester architecture
+
+Figure \ref{fig:harvester-architecture} shows a schematic view of the Harvester architecture. Harvester is a
 stateless service with a local master database and a central slave database.
 The local database is used for real-time bookkeeping close to resources, and
 the central database is periodically synchronized with the local database to
@@ -137,7 +144,7 @@ communication between harvester and the PanDA server is bidirectional.
 Harvester fetches job descriptions that have to be executed from PanDA Server
 using communicator component, same component is used to report back the
 status of these jobs. Harvester accesses resources through different plugins
-(Figure 2) which have been developed by resource experts. When Harvester
+(Figure \ref{fig:harvester-modules}) which have been developed by resource experts. When Harvester
 instances run on edge nodes of HPC centers they access compute nodes through
 local HPC batch systems using HPC submission plugins. Status of the batches
 is tracked using monitor plugin. Input and output data are transferred with
@@ -146,8 +153,14 @@ Rucio~\cite{garonne2014rucio}, Globus Online~\cite{foster2011globus}  and
 other data transfer clients. All of the communication between the components
 is done via local database.
 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.49\textwidth]{figures/panda-harvester-modules.pdf}
+	\caption{Modules used for PanDA-NGE interaction}
+	\label{fig:harvester-modules}
+\end{figure}
 
-Figure. Modules used for PanDA-NGE interaction
+% Figure. Modules used for PanDA-NGE interaction
 
 In context of BigPanDA project several instances of Harvester have been
 deployed on front nodes of BNL Institutional Cluster, NERSC (Cori), Titan and
