Added reference to Harvester

--- a/main.bib
+++ b/main.bib
@@ -62,3 +62,8 @@
 	volume={30 10},
 	pages={1545-614}
 }
+
+@electronic{Harvester,
+	title = {Harvester},
+	url = {https://github.com/PanDA WMS/panda-harvester/wiki}
+}
