--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -4,6 +4,8 @@
 
 \usepackage{xcolor}
 
+\usepackage[justification=centering]{caption}
+
 \begin{document}
 
 \title{PanDA and RADICAL-Pilot Integration: Enabling the Pilot Paradigm on HPC Resources}
@@ -113,7 +115,7 @@ machines.
 % ---------------------------------------------------------------------------
 \section{Harvester}
 
-\textcolor{red}{Harvester [Harvester]} is a resource-facing service developed for ATLAS
+Harvester \cite{Harvester} is a resource-facing service developed for ATLAS
 experiment at CERN since 2016 with a wide collaboration of experts.  It is
 stateless with a modular design to work with different resource types and
 workloads. The main objectives of Harvester are as follows: first, it should
