Editing and iteration

--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,4 @@
-@article{turilli2018comprehensive,
+@inproceedings{turilli2018comprehensive,
   title={A comprehensive perspective on pilot-job systems},
   author={Turilli, Matteo and Santcroos, Mark and Jha, Shantenu},
   journal={ACM Computing Surveys (CSUR)},
@@ -17,7 +17,7 @@
   year={2017}
 }
 
-@article{merzky2018using,
+@inproceedings{merzky2018using,
   author={Andre Merzky and Matteo Turilli and Manuel Maldonado  and Mark Santcroos and Shantenu Jha},
   title={Using Pilot Systems to Execute Many Task Workloads on Supercomputers},
   journal={JSSPP 2018 (in conjunction with IPDPS'18)},
@@ -43,7 +43,7 @@
   organization={IOP Publishing}
 }
 
-@article{foster2011globus,
+@inproceedings{foster2011globus,
   title={Globus Online: Accelerating and democratizing science through cloud-based services},
   author={Foster, Ian},
   journal={IEEE Internet Computing},
@@ -54,7 +54,7 @@
   publisher={IEEE}
 }
 
-@article{Brooks2009CHARMMTB,
+@inproceedings{Brooks2009CHARMMTB,
 	title={CHARMM: The biomolecular simulation program},
 	author={Bernard R. Brooks and Charles L. Brooks and Alexander D. MacKerell and Lennart Nilsson and Robert J. Petrella and Beno{\^i}t Roux and Y. Won and G. Archontis and Christian Bartels and Stefan Boresch and Amedeo Caflisch and Leo S. D. Caves and Qiang Cui and Aaron R. Dinner and Michael Feig and S. Fischer and Jiali Gao and Milan Hodo{\vs}{\vc}ek and Wonpil Im and Krzysztof Kuczera and Themis Lazaridis and J. Ma and V. Ovchinnikov and Emanuele Paci and Richard W. Pastor and Carol Beth Post and J. Z. Pu and Michael Schaefer and Bruce Tidor and Richard M. Venable and H. Lee Woodcock and Xin Wu and W. Yang and Darrin M. York and Martin Karplus},
 	journal={Journal of computational chemistry},
@@ -66,4 +66,16 @@
 @electronic{Harvester,
 	title = {Harvester},
 	url = {https://github.com/PanDA WMS/panda-harvester/wiki}
+}
+
+@electronic{openshift,
+  title = {{OLCF} Testing New Platform for Scientific Workflows},
+  author = {Jonathan Hines},
+  url = {https://www.olcf.ornl.gov/2017/06/05/olcf-testing-new-platform-for-scientific-workflows/}
+}
+
+@electronic{showbf,
+  title = {Choosing an Interactive Job’s nodes Value},
+  author = {OLCF Support Team},
+  url = {https://www.olcf.ornl.gov/for-users/system-user-guides/titan/running-jobs/}
 }
