Added number of jobs for ATLAS on Titan

--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -56,7 +56,7 @@ implemented by one or more modules. Databases are used to store stateful
 entities like tasks, jobs and input/output data, and to store information
 about sites, resources, logs, and accounting. PanDA can execute ATLAS tasks
 on a variety of infrastructures, including high performance computing
-facilities. In the past three years, PanDA was used to execute \ldots million
+facilities. In the past three years, PanDA was used to process around 11 million
 jobs on Titan, a leadership-class machine managed by the Oak Ridge Leadership
 Computing Facility (OLCF) at the Oak Ridge National Laboratory (ORNL).
 
