Failed attempt to fix references

--- a/main.bib
+++ b/main.bib
@@ -63,7 +63,7 @@
 	pages={1545-614}
 }
 
-@electronic{Harvester,
+@electronic{harvester,
 	title = {Harvester},
 	url = {https://github.com/PanDA WMS/panda-harvester/wiki}
 }
