--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -116,7 +116,7 @@ machines.
 % ---------------------------------------------------------------------------
 \section{Harvester}
 
-Harvester~\cite{Harvester} is a resource-facing service developed for the
+Harvester~\cite{harvester} is a resource-facing service developed for the
 ATLAS experiment at CERN since 2016 with a wide collaboration of experts.
 Harvester is stateless with a modular design to work with different resource
 types and workloads. The main objectives of Harvester are: (i) serving as a
