allow line break in long url

--- a/main.bib
+++ b/main.bib
@@ -71,7 +71,7 @@
 @electronic{openshift,
   title = {{OLCF} Testing New Platform for Scientific Workflows},
   author = {Jonathan Hines},
-  url = {https://www.olcf.ornl.gov/2017/06/05/olcf-testing-new-platform-for-scientific-workflows/}
+  url = {https://www.olcf.ornl.gov/2017/06/05/olcf-testing-new-platform\-for-scientific-workflows/}
 }
 
 @electronic{showbf,
