--- a/nge-harvester.tex
+++ b/nge-harvester.tex
@@ -16,8 +16,8 @@
   \firstname{Matteo} \lastname{Turilli}\inst{2}
 }
 
-\institute{Brookhaven National Laboratory \and
-           Rutgers University 
+\institute{Rutgers University, New Brunswick, NJ, USA \and
+           Brookhaven National Laboratory (BNL), Upton, NY, USA
 }
 
 \abstract{PanDA executes millions of ATLAS jobs a month on Grid systems with
@@ -41,7 +41,7 @@ and manage the execution of PanDA workloads.}
 \section{Introduction}
 \label{intro} 
 
-PanDA is the Workload Management System (WMS) used by the ATLAS experiment at
+PanDA~\cite{PanDA} is the Workload Management System (WMS) used by the ATLAS experiment at
 the LHC to execute scientific applications on widely distributed resources.
 PanDA is designed to support the execution of distributed workloads via
 pilots~\cite{turilli2018comprehensive}. Pilot-capable WMS enable high
@@ -66,21 +66,21 @@ abstraction to execute tasks on grid resources, on HPC facilities PanDA
 submits jobs directly to the batch system of the machine. The size and
 duration of these jobs depend on resource availability and workload
 requirements. PanDA polls resource availability from Titan every ten minutes
-via the backfill functionality of the Moab scheduler and, in case, submits a
-job requiring that amount of resources. The workload of this job is sized so
+via the backfill functionality of the Moab scheduler and, in case of available resources, 
+submits a job requiring that amount of resources. The workload of this job is sized so
 to allow its execution within the available walltime. PanDA uses Titan’s
 resources to execute Geant4 event simulations, a specific type of workload
 that is amenable to execute via the machine’s batch system.
 
-In this paper, we present the integration between Harvester and Next
-Generation Executor (NGE). Harvester is a new resource-facing service
+In this paper, we present the integration between Harvester (section ~\ref{section:harvester}) and Next
+Generation Executor (NGE) (section ~\ref{sec:rp}). Harvester is a new resource-facing service
 developed by ATLAS to enable execution of ATLAS workloads on HPC machines,
 bringing further coherence in the PanDA stack across the support of different
 types of infrastructures, like grid and HPC. NGE is a REST interface
 developed for RADICAL-Pilot, a pilot system designed to support
 high-throughput computing on HPC infrastructures, including leadership-class
 machines like Titan. Different from Harvester, NGE enables to submit a pilot
-job via the batch system of Titan and then directly scheduling tasks on the
+job via the batch system of Titan and then directly schedule tasks on the
 acquired resources without queuing on the machine batch system. In this way,
 tasks can be executed immediately while respecting the policies of the HPC
 machine.
@@ -96,7 +96,7 @@ way, tasks can be late bound to an active pilot, depending on the current and
 remaining availability. This is important because, in principle, ATLAS would
 not have to bind a specific portion of tasks to an HPC machine in advance but
 it could bind tasks only when the HPC resources become available. This would
-bring further coherence to ATLAS software stack, as pilots and late binding
+bring further coherence to the ATLAS software stack, as pilots and late binding
 are already used for grid resources.
 
 RADICAL-Pilot offers a number of distinctive features. Among these, the most
@@ -107,7 +107,7 @@ For example, if a task executes a Geant4 simulation and another a molecular
 dynamic simulation, both tasks can run at the same time on the same pilot.
 Further, RADICAL-Pilot also enables the concurrent execution of different
 tasks on CPU and GPU, allowing for the full utilization of HPC worker nodes
-resources. This capabilities will enable PanDA to transition from a workload
+resources. These capabilities will enable PanDA to transition from a workload
 management system specifically designed to support the execution of ATLAS
 workloads, to a system for the execution of general purpose workloads on HPC
 machines.
@@ -115,8 +115,9 @@ machines.
 
 % ---------------------------------------------------------------------------
 \section{Harvester}
+\label{section:harvester}
 
-Harvester~\cite{harvester} is a resource-facing service developed for the
+Harvester~\cite{Megino_2017} is a resource-facing service developed for the
 ATLAS experiment at CERN since 2016 with a wide collaboration of experts.
 Harvester is stateless with a modular design to work with different resource
 types and workloads. The main objectives of Harvester are: (i) serving as a
@@ -149,7 +150,7 @@ used to report back the status of these jobs.
 
 Figure~\ref{fig:harvester-modules} shows how harvester accesses resources
 through different plugins. Multiple Harvester instances run on one or more
-edge node of an HPC center, and access the compute nodes of HPC resources
+edge nodes of an HPC center, and access the compute nodes of HPC resources
 through local HPC batch systems using specific submission plugins. The status
 of each batch submission is tracked using monitor plugin. Input and output
 data are transferred with various stager and preparator plugins, which
@@ -164,7 +165,7 @@ among the components is implemented via the local Harvester database.
 	\label{fig:harvester-modules}
 \end{figure}
 
-In the context of BigPanDA project, several instances of Harvester have been
+In the context of the BigPanDA project, several instances of Harvester have been
 deployed on front nodes of BNL Institutional Cluster, NERSC (Cori), Titan and
 Jefferson Lab clusters. These instances are serving experiments like ATLAS,
 LQCD, nEDM, IceCube and LSST.
@@ -173,7 +174,7 @@ LQCD, nEDM, IceCube and LSST.
 % ---------------------------------------------------------------------------
 \section{RADICAL-Pilot and Next Generation Executor}\label{sec:rp}
 
-RADICAL-Pilot (RP) is a pilot system which enables task-level concurrency on
+RADICAL-Pilot (RP)~\cite{Merzky2018DesignAP} is a pilot system which enables task-level concurrency on
 a variety of infrastructures, including XSEDE HPC and grid systems, NARC
 Cheyenne, NCSA Blue Waters, and ORNL Reha, Titan and
 Summit~\cite{merzky2018using}. As a pilot system, RP allows scheduling jobs
@@ -184,7 +185,7 @@ this way, tasks do not wait in the queue but execute immediately, enabling
 high-throughput on HPC machines. It is important to stress that RP, and pilot
 systems in general, do not ``game'' the scheduling policies of the HPC
 machines: resource acquisition is performed via the batch system and
-resources remain available only for the given walltime. Jobs waits in the
+resources remain available only for the given walltime. Jobs wait in the
 queue alongside all the other jobs and are subjected to queue, allocation and
 fair-use policies of the system.
 	
@@ -214,8 +215,8 @@ properties can be added to the pilot, task and resource descriptions, and
 more functionalities can be implemented for this entities. Currently,
 composability is partially designed and implemented: while the pilot-API can
 be used by both users and other systems to describe and execute task-based
-workloads, RADICAL-Pilot requires RADICAL-SAGA to interface to HPC resources.
-A prototype interface to cloud resources based on LibCloud is available and a
+workloads, RADICAL-Pilot requires RADICAL-SAGA~\cite{MERZKY20153} to interface to HPC resources.
+A prototype interface to cloud resources based on LibCloud~\cite{LibCloud} is available and a
 general-purpose resource connector component is under development.
 	
 Figure~\ref{fig:rp-arch} shows RP architecture and execution model. RP
@@ -255,7 +256,7 @@ available resources as no unit can be executed while in transit. To address
 this issue, RP transfers units in bulk, reducing the overall latency of unit
 transfer to a single round trip. Further, units are scheduled via a database
 instance that needs to be reachable by both the machine on which the unit
-managers is instantiated, and the remote machine on which the units will have
+managers are instantiated, and the remote machine on which the units will have
 to be executed.
 	
 RP supports the execution of units which require staging of input and/or
@@ -284,12 +285,12 @@ resource's backfill availability, shaping the pilots so that they fit the
 available backfill constraints.
 	
 NGE's pilot shaping capabilities are policy driven: they can be adapted to
-the configuration of the target resource, but also to the specific specific
+the configuration of the target resource, but also to the specific 
 requirements of diverse use cases. This makes NGE deployments configurable
 for specific user groups and projects. In the context of the presented use
 case, NGE is configured to mimic properties which were available in Panda's
 native execution backend, which semantically eases the integration between
-he two systems.
+the two systems.
 
 
 % ---------------------------------------------------------------------------
@@ -333,7 +334,7 @@ multiple pilots on the same resource.
            OpenShift.}\label{fig:integration}
 \end{figure}
 
-Harvester can pull NGE to know how many cores are available and for how long
+Harvester can poll NGE to know how many cores are available and for how long
 they will remain available (Figure~\ref{fig:integration}.3), and push a
 number of tasks to NGE for execution (Figure~\ref{fig:integration}.4). Note
 that before pushing tasks to NGE, Harvester makes sure that the input data
@@ -382,7 +383,7 @@ This suggests that end-to-end models of middleware, where a single ecosystem
 of modules is designed to provide all the functionalities required to enable
 distributed computing can be replaced by a model in which systems are
 independently designed to be integrated. As seen in this paper, designing for
-integration means developing a well-define API, making explicit entities and
+integration means developing a well-defined API, making explicit entities and
 state models. Entities and functionalities must be chosen at the right level
 of abstraction so to avoid the specificity of single implementations. For
 example, NGE exposes Task, Core and Walltime entities. These are sufficiently
@@ -396,7 +397,7 @@ native API. We have now to compare the execution of a standard ATLAS Geant4
 workload with Harvester to the same execution performed with Harverser and
 NGE. This comparison will measure integration overheads but also workload
 execution performance. We expect that the execution on pilot will introduce
-optimizations, especially related to AthenaMP setup and the total number of
+optimizations, especially related to AthenaMP~\cite{Crooks_2012} setup and the total number of
 events processed per walltime unit. After this characterization, we will be
 ready to concurrently execute heterogeneous workloads, using the same pilot
 to run tasks of distinct users from diverse domains. This will make PanDA a
