--- a/main.bib
+++ b/main.bib
@@ -21,6 +21,8 @@
   author={Andre Merzky and Matteo Turilli and Manuel Maldonado  and Mark Santcroos and Shantenu Jha},
   title={Using Pilot Systems to Execute Many Task Workloads on Supercomputers},
   journal={JSSPP 2018 (in conjunction with IPDPS'18)},
+  booktitle={JSSPP 2018 (in conjunction with IPDPS'18)}, 
+  pages={61--82}, 
   year=2018
 }
 
@@ -146,4 +148,23 @@
 @electronic{LibCloud,
 	title = {LibCloud},
 	url = {https://libcloud.readthedocs.io/en/latest/compute/drivers/ec2.html}
+}
+
+
+@article{3b6dad414e794d36954333f8f177f47c,
+	title = "CHARMM: The biomolecular simulation program",
+	abstract = "CHARMM (Chemistry at HARvard Molecular Mechanics) is a highly versatile and widely used molecular simulation program. It has been developed over the last three decades with a primary focus on molecules of biological interest, including proteins, peptides, lipids, nucleic acids, carbohydrates, and small molecule ligands, as they occur in solution, crystals, and membrane environments. For the study of such systems, the program, provides a large suite of computational tools that include numerous conformational and path sampling methods, free energy estimators, molecular minimization, dynamics, and analysis techniques, and model-building capabilities. The CHARMM! program is applicable to problems involving a much broader class of many-particle systems. Calculations with CHARMM can be performed, using a number of different energy functions and models, from mixed quantum mechanical-molecular mechanical force fields, to all-atom classical potential energy functions with explicit solvent and various boundary conditions, to implicit solvent and membrane models. The program, has been ported to numerous platforms in both serial and parallel architectures. This article provides an overview of the program, as it exists today with, an emphasis on developments since the publication of the original CHARMM article in 1983.",
+	keywords = "Biomolecular simulation, Biophysical computation, CHARMM program, Energy function, Molecular dynamics, Molecular mechanics, Molecular modeling",
+	author = "Brooks, {B. R.} and Brooks, {C. L.} and Mackerell, {A. D.} and others",
+	year = "2009",
+	month = "7",
+	day = "30",
+	doi = "10.1002/jcc.21287",
+	language = "English (US)",
+	volume = "30",
+	pages = "1545--1614",
+	journal = "Journal of Computational Chemistry",
+	issn = "0192-8651",
+	publisher = "John Wiley and Sons Inc.",
+	number = "10",
 }
